# dcEmb

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING.BSD3  NEWS  README.md  sample_solution.txt
cmake/: FindSphinx.cmake  UseSphinxDoc.cmake
doc/: Doxyfile.in
docs/source/doxygen/: Doxyfile.in
docs/source/sphinx/: conf.py
docs/source/sphinx/source/: conf.py  contributing.rst  doxygen.rst  howto.rst  install.rst
docs/source/sphinx/source/_themes/embecosm-theme/: theme.conf
include/: bma_model.hh  bmr_model.hh  country_data.hh  dynamic_model.hh  feature_selection_function.hh  generative_function.hh  peb_model.hh  serialization.hh  utility.hh
include/3body/: DEM_3body.hh  dynamic_3body_model.hh  feature_selection_3body.hh  generative_3body.hh  parameter_location_3body.hh
include/COVID/: DEM_COVID.hh  dynamic_COVID_model.hh  feature_selection_COVID.hh  generative_COVID.hh  import_COVID.hh  parameter_location_COVID.hh  run_COVID_dcm.hh
include/tests/: dynamic_3body_model_test.hh  dynamic_COVID_model_test.hh  dynamic_weather_model_test.hh  serialization_test.hh
include/weather/: DEM_weather.hh  dynamic_weather_model.hh  parameter_location_weather.hh  run_weather_dcm.hh  species_struct.hh
man/source/: conf.py  currentmodels.rst  doxygen.rst  howto.rst  index.rst  install.rst  testingsuite.rst
man/source/_themes/embecosm-theme/: cclicence.html  layout.html  theme.conf
man/source/_themes/embecosm-theme/static/: embdebug-theme.css_t  embecosm-theme.css_t
python/: dynamic_python_model.pxd  dynamic_python_model.pyx  eigen_to_mv.pxd  matrixxdpy.pxd  matrixxipy.pxd  mv_to_eigen.pxd  setup.py  test.py  vectorxdpy.pxd  vectorxipy.pxd
python/cpp/: cpp_matrixxdpy.hh  cpp_matrixxipy.hh  cpp_vectorxdpy.hh  cpp_vectorxipy.hh  dynamic_python_model.cc  dynamic_python_model.hh  eigen_to_mv.cc  eigen_to_mv.hh  mv_to_eigen.cc  mv_to_eigen.hh
src/: dynamic_model.cc  feature_selection_function.cc  generative_function.cc  utility.cc
src/3body/: DEM_3body.cc  dynamic_3body_model.cc  feature_selection_3body.cc  generative_3body.cc  run_3body_dcm.cc
src/COVID/: DEM_COVID.cc  dynamic_COVID_model.cc  feature_selection_COVID.cc  generative_COVID.cc  import_COVID.cc  run_COVID_dcm.cc
src/data/: Brazil_posterior_p_c.csv  Brazil_posterior_p_e.csv  India_posterior_p_c.csv  India_posterior_p_e.csv  Mexico_conditional_parameter_covariances.csv  Mexico_posterior_p_c.csv  Mexico_posterior_p_e.csv  Russia_conditional_parameter_covariances.csv  Russia_posterior_p_c.csv  Russia_posterior_p_e.csv  US_conditional_parameter_covariances.csv  US_conditional_parameter_expectations.csv  US_posterior_p_c.csv  US_posterior_p_e.csv  bma_posterior_p_e.csv  brazil_conditional_parameter_covariances.csv  brazil_conditional_parameter_expectations.csv  india_conditional_parameter_covariances.csv  india_conditional_parameter_expectations.csv  mexico_conditional_parameter_expectations.csv  peb_conditional_parameter_covariances.csv  peb_conditional_parameter_expectations.csv  peb_posterior_p_c.csv  peb_posterior_p_e.csv  peb_prior_p_c.csv  peb_prior_p_e.csv  peb_prior_parameter_covariances.csv  peb_prior_parameter_expectations.csv  population.csv  russia_conditional_parameter_expectations.csv  time_series_covid19_confirmed_global.csv  time_series_covid19_confirmed_global_new.csv  time_series_covid19_deaths_global.csv
src/weather/: DEM_weather.cc  dynamic_weather_model.cc  run_weather_dcm.cc
tests/: dynamic_3body_model_test.cc  dynamic_COVID_model_test.cc  dynamic_weather_model_test.cc  feature_selection_COVID_test.cc  generative_COVID_test.cc  import_COVID_test.cc  serialization_test.cc  utility_test.cc
visualisation/: visualise_3body.py  visualise_weather.py
